duncan's edits to paper and stand alone methodology proposal

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -43,7 +43,7 @@ University of Southern California}
 
 \singlespacing
 \begin{abstract}
-\noindent This paper estimates the diverse array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children and their families. The program is a prototype for numerous interventions currently in place around the world. It is evaluated by random assignment and follows participants through their mid-30s. It has substantial beneficial long-term effects on (a) health and the quality of life, (b) the labor incomes of participants, (c) crime, (d) education, and (e) the labor incomes of the mothers of the participants through subsidizing their childcare. Benefits arise in multiple domains across the life cycle for both genders, but there are substantially greater monetized benefits for males. The overall rate of return and benefit/cost ratio are economically and statistically significant: 13\% per annum and 5.6 respectively. These estimates account for the welfare costs of taxation to finance the program and survive a variety of sensitivity analyses. Accounting for substitutes to treatment available to the control group shows that males benefit much less from relatively low alternative childcare centers if compared to females.
+\noindent This paper estimates the diverse array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children and their families. The program is a prototype for numerous interventions currently in place around the world. It is evaluated by random assignment and follows participants through their mid-30s. It has substantial beneficial long-term effects on (a) health and the quality of life, (b) the labor incomes of participants, (c) crime, (d) education, and (e) the labor incomes of the mothers of the participants through subsidizing their childcare. Benefits arise in multiple domains across the life cycle for both genders, but there are substantially greater monetized benefits for males. The overall rate of return and benefit/cost ratio are economically and statistically significant: 13\% per annum and 5.6 respectively. These estimates account for the welfare costs of taxation to finance the program and survive a variety of sensitivity analyses. Accounting for substitutes to treatment available to the control group shows that males benefit much less from relatively low quality alternative childcare centers if compared to females.
 \end{abstract}
 
 \noindent \textbf{Keywords}: Childcare, crime, early childhood education, gender differences in responses to programs, health, long-term predictions, (health-related) quality of life, randomized trials, substitution bias \\
@@ -112,7 +112,7 @@ Figure~\ref{figure:main} summarizes the main findings of this paper. It displays
 \footnotesize
 Note: This figure displays the life-cycle net present values per program participant of the main components of the cost/benefit analysis of ABC/CARE from birth to predicted death, discounted to birth at a rate of 3\%.  By ``net" we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs: the total cost of implementing ABC/CARE. Total net benefits: the total net benefits of \textit{all} the components we consider. Labor income: total individual labor income from ages 20 to the retirement of program participants (assumed to be age 67). Parental income: total parental labor income of the parents of the participants from when the participants were ages 1.5 to 21. Crime: the total cost of crime (judicial and victimization costs). For display simplicity, the following components are omitted from the figure: (i) cost of alternative preschool paid by the control group children parents; (ii) transfer income from the government; (iii) disability benefits and social security claims; (iv) costs of increased individual and maternal education; (v) total medical public and private costs. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.\\
 *Labor Income results by gender indicate a statistically significant net present value of $\$308,825$ (2014 USD) for males; this value is $\$50,580$ (2014 USD) for females and it is not statistically significant.\\
-**QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions through predicted death.\\}
+**QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions through predicted death, with $\$150,000$ (2014 USD) as base value for a year of life.\\}
 \end{sidewaysfigure}
 
 The rest of the paper justifies and interprets these estimates. We proceed in the following way. Section~\ref{section:background} discusses main features of ABC/CARE. Section~\ref{section:methodsquestions} defines the parameters of interest. Section~\ref{section:methodology} discusses our approaches to inference for vectors of treatment effects. We use combining functions that summarize the \emph{number} of beneficial outcomes, as well as the number of statistically significant beneficial outcomes. Section~\ref{section:c-functions} presents a summary of treatment effects and inference for combining functions. We also report step-down $p$-values for each vector and summarize standard treatment effects for ABC/CARE accounting for multiple hypothesis testing by adjusting $p$-values for the multiplicity of reported outcomes to avoid cherry-picking ``significant'' results.\footnote{\citet{Lehman_Romano_2005_AnnStat,Romano_Shaikh_2006_AnnStat}. For an application, see, e.g., \cite{Heckman_Moon_etal_2010_QE}.}
@@ -152,11 +152,11 @@ Our analysis focuses on the first phase and pools the treatment group in CARE th
 \end{adjustbox}
 \end{table}
 
-For both programs, from birth until the age of 8, data were collected annually on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics. After age 8, data on cognitive and socio-emotional skills, education, and family economic characteristics were collected at ages 12, 15, 21, and 30.\footnote{At age 30, measures of cognitive skills are unavailable for both ABC and CARE.} In addition, we have access to unique administrative criminal records and a full medical survey at age 34. This allows us to study the long-term effects of the programs along multiple dimensions of human development.\footnote{See Appendix~\ref{appendix:data} for a more comprehensive description of the data. In this same appendix, we document the balance in observed baseline characteristics across the treatment and control groups, once we drop the individuals for whom we have crime or health information, for which there is substantial attrition. Further, the methodology we propose addresses missing information in either of these two outcome categories.}
+For both programs, from birth until the age of 8, data were collected annually on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics. After age 8, data on cognitive and socio-emotional skills, education, and family economic characteristics were collected at ages 12, 15, 21, and 30.\footnote{At age 30, measures of cognitive skills are unavailable for both ABC and CARE.} In addition, we have access to unique administrative criminal records and a full medical survey at age 34. This allows us to study the long-term effects of the programs along multiple dimensions of human development.\footnote{See Appendix~\ref{appendix:data} for a more comprehensive description of the data. In this same appendix, we document the balance in observed baseline characteristics across the treatment and control groups, once we drop the individuals for whom we have no crime or health information, for which there is substantial attrition. Further, the methodology we propose addresses missing information in either of these two outcome categories.}
 
 \subsection{Randomization Protocol and Compromises} \label{section:randomization}
 
-Randomization for ABC/CARE was paired and conducted at the family level. Siblings and twins were jointly randomized into either treatment or control groups.\footnote{For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program.} Although we know that the randomization pairing was based on the HRI, maternal education, maternal age, and gender of the subject, we do not know the original pairs. ABC collected an initial sample of 122 subjects. 22 subjects did not complete the first-phase of treatment as initially assigned by the randomization. We characterize each of the cases in Appendix~\ref{appendix:background} and document that our estimates are robust when we adjust for missing data using standard methods in Appendix~\ref{appendix:attrition}. We conduct a comparable analysis for the CARE sample.
+Randomization for ABC/CARE was paired and conducted at the family level. Siblings and twins were jointly randomized into either treatment or control groups.\footnote{For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program.} Although we know that the randomization pairing was based on the HRI, maternal education, maternal age, and gender of the subject, we do not know the original pairs. ABC collected an initial sample of 122 subjects. We characterize each of the cases in Appendix~\ref{appendix:background} and document that our estimates are robust when we adjust for missing data using standard methods in Appendix~\ref{appendix:attrition}. We conduct a comparable analysis for the CARE sample. 22 subjects did not complete the first-phase of treatment as initially assigned by the randomization in ABC/CARE. 
 
 \subsection{Control Group Substitution}
 
@@ -534,7 +534,7 @@ In practice, ABC/CARE had a childcare component: childcare to the parents of tre
 
 We observe parental income at eight different years from when the experimental subjects were born until they were 21.\footnote{The ages at which parental income is observed is at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers in ABC/CARE were, on average, 41 years old.} Our baseline estimation considers the treatment effect on parental income without going beyond this age. We linearly interpolate the ages for which we do not have observations between 0 and 21.\footnote{Depending on the model of labor supply, labor income should or should not include the value of forgone leisure. We conduct a sensitivity analysis below by considering the case when markets are assumed to be clearing and the marginal value of leisure is the market wage.} As Table~\ref{table:tescombined} shows, treatment effects on parental income are sustained through child's age 21. This is presumably due to wage growth (higher education and/or more experience). An ideal approach considers the profile over the full life cycle of mothers. We propose two alternative approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; and (ii) an approach based on the model of Section~\ref{section:just}. We present estimates using the baseline approach and for these two alternatives in Section~\ref{section:cbaresults}. The benefits of the program increase when considering the full life cycle of mothers, using either approach.
 
-If it is true that ABC/CARE had a childcare component benefits inducing benefits on parental labor market outcomes, it is likely the case that it benefits parents who, at baseline, did not have any other children. If they did, then they might have had to take care of other children anyway, weakening the childcare-driven effect (especially if there are younger siblings present). Figure~\ref{figure:pincome} shows that the net increase (treatment minus control) in discounted parental income is much higher in the absence of siblings (of the participant children) at baseline. The effect also weakens when comparing children who have siblings younger than 5 years old to children who have siblings 5 years old or younger.\footnote{These patterns persist when splitting the ABC/CARE sample by gender, but the estimates are not precise because the samples become too small.}
+If it is true that ABC/CARE had a childcare component inducing benefits on parental labor market outcomes, it is likely the case that it benefits parents who, at baseline, did not have any other children. If they did, then they might have had to take care of other children anyway, weakening the childcare-driven effect (especially if there are younger siblings present). Figure~\ref{figure:pincome} shows that the net increase (treatment minus control) in discounted parental income is much higher in the absence of siblings (of the participant children) at baseline. The effect also weakens when comparing children who have siblings younger than 5 years old to children who have siblings 5 years old or younger.\footnote{These patterns persist when splitting the ABC/CARE sample by gender, but the estimates are not precise because the samples become too small.}
 
 \begin{figure}[!htbp]
 \centering
@@ -555,11 +555,11 @@ Note: Panel (a) displays the net-present value (treatment less control) of paren
 
 \subsection{Health} \label{section:health}
 
- We predict and monetize health outcomes based on a version of Equation~\eqref{eq:trenchfoot} with a full vector of lagged dependent variables. This requires adapting the the models of Section~\ref{section:just}. Three additional issues arise: (i) health outcomes such as diabetes or heart disease are absorbing states; (ii) health outcomes are highly interdependent within and across time periods; and (iii) there is no obvious terminal time period for benefits and costs except death, which is endogenous.\footnote{For example, for income we extrapolate up to the retirement age of 67. However, for health, we need to predict an age of death for each individual.} Our auxiliary model for health is an adaptation of the Future America Model (FAM). This model predicts health outcomes from the subjects' mid-30s up to their projected death \citep{Goldman_etal_2015_Future-Elderly-Model-Report}.\footnote{The simulation starts at the age in which we observe the subject's age-34 health follow-up. On average this happened at age 34 for both males and females, but there is variation ranging from age 30 to age 37.} Appendix~\ref{appendix:health} discusses the FAM methodology in detail. We initialize the health prediction using the same variables that we use when predicting labor and transfer income, along with the initial health conditions as listed in Table~\ref{table:transition}.
+ We predict and monetize health outcomes based on a version of Equation~\eqref{eq:trenchfoot} with a full vector of lagged dependent variables. This requires adapting the the models of Section~\ref{section:just}. Three additional issues arise: (i) health outcomes such as diabetes or heart disease are absorbing states; (ii) health outcomes are highly interdependent within and across time periods; and (iii) there is no obvious terminal time period for benefits and costs except death, which is endogenous.\footnote{For example, for income we extrapolate up to the retirement age of 67. However, for health, we need to predict an age of death for each individual.} Our auxiliary model for health is an adaptation of the Future America Model (FAM). This model predicts health outcomes from the subjects' mid-30s up to their projected death \citep{Goldman_etal_2015_Future-Elderly-Model-Report}.\footnote{The simulation starts at the age in which we observe the subject's age-30 follow-up.} Appendix~\ref{appendix:health} discusses the FAM methodology in detail. We initialize the health prediction using the same variables that we use when predicting labor and transfer income, along with the initial health conditions as listed in Table~\ref{table:transition}.
 
 The methodology has five steps: (i) estimate age-by-age health state transition probabilities using the Panel Study of Income Dynamics (PSID); (ii) match these transition probabilities to the ABC/CARE subjects based on observed characteristics; (iii) estimate quality-adjusted life year (QALY) models using the Medical Expenditure Panel Survey (MEPS) and the PSID; (iv) estimate medical cost models using the MEPS and the Medicare Current Beneficiary Survey (MCBS), allowing estimates to differ by health state and observed characteristics; and (v) predict the medical expenditure and QALYs that correspond to the simulated individual health trajectories.\footnote{As an intermediate step between (i) and (ii), we impute some of the variables used to initialize the FAM models (see Appendix~\ref{appendix:health}).}
 
-Our microsimulation model starts the health predictions at age 30, with the information on observed characteristics available at this age. Restricting it to the individuals for whom we have information from the age-34 health follow-up allows us to account for components that are important for predicting health outcomes, such as the body mass index (BMI) and measures of diastolic and systolic blood pressure readings. The models predict the probability of being in any of the states in the horizontal axis of Table~\ref{table:transition} at age $a+1$ based on the state at age $a$, which is described by the vertical axis of the table.\footnote{In practice, the predictions are based on two-year lags, due to data limitations in the auxiliary sources we use to simulate the FAM. For example, if the individual is 30 (31) years old in the age-30 interview, we simulate the trajectory of her health status at ages 30 (31), 32 (33), 34 (35), and so on until her projected death.} Absorbing states are an exception. For example, heart disease at age $a$ does not enter in the estimation of transitions for heart disease at age $a+1$ because it is an absorbing state: once a person has heart disease, she carries it through the rest of her life.
+Our microsimulation model starts the health predictions at age 30, with the information on observed characteristics available at this age. Restricting it to the individuals for whom we have information from the age-34 health follow-up allows us to account for components that are important for predicting health outcomes. The models predict the probability of being in any of the states in the horizontal axis of Table~\ref{table:transition} at age $a+1$ based on the state at age $a$, which is described by the vertical axis of the table.\footnote{In practice, the predictions are based on two-year lags, due to data limitations in the auxiliary sources we use to simulate the FAM. For example, if the individual is 30 (31) years old in the age-30 interview, we simulate the trajectory of her health status at ages 30 (31), 32 (33), 34 (35), and so on until her projected death.} Absorbing states are an exception. For example, heart disease at age $a$ does not enter in the estimation of transitions for heart disease at age $a+1$ because it is an absorbing state: once a person has heart disease, she carries it through the rest of her life.
 
 \begin{sidewaystable}[!htbp]
 \begin{threeparttable}
@@ -575,7 +575,7 @@ Our microsimulation model starts the health predictions at age 30, with the info
 
 At each age, once we obtain the transition probability for each health outcome, we make a Monte-Carlo draw for each subject. Thus, each simulation depends on each individual's health history and on their particular characteristics. For every simulated trajectory of health outcomes, we predict the lifetime medical expenditure using the models estimated from the MEPS and the MCBS. We then obtain an estimate of the expected lifetime medical expenditure by taking the mean of each individual's simulated lifetime medical expenditure.
 
-The same procedure is applied to calculate quality-adjusted life years (QALYs).\footnote{A quality-adjusted life year (QALY) reweighs a year of life according to its quality given the burden of disease. Suppose we assign a value of $\$150,000$ (2014 USD) to each year of life. A QALY of $\$150,000$ denotes a year of life in the absence of disease (perfect health). The value of QALY for an individual in a given year is smaller than $\$150,000$ when there is positive burden of disease, as worse health conditions imply lower QALYs. When an individual dies, her QALY equals zero. There are extreme combinations of disease and disability that may generate negative QALYs, although this case is unusual.} We compute a QALY model based on a widely-used health-related Quality-of-life (HRQoL) measure, available in MEPS.\footnote{For a definition and explanation of this instrument see \citet{Shaw_etal_2005_EQ5D_MC} and \citet{Dolan_1997_Modeling_MC}.} We then estimate this model using the PSID.
+The same procedure is applied to calculate quality-adjusted life years (QALYs).\footnote{A quality-adjusted life year (QALY) reweighs a year of life according to its quality given the burden of disease. Suppose we assign a value of $\$150,000$ (2014 USD) to each year of life. A QALY of $\$150,000$ denotes a year of life in the absence of disease (perfect health). The value of QALY for an individual in a given year is smaller than $\$150,000$ when there is positive burden of disease, as worse health conditions imply lower QALYs. When an individual dies, her QALY equals zero. There are extreme combinations of disease and disability that may generate negative QALYs, although this case is unusual.} We compute a QALY model based on a widely-used health-related Quality-of-life (HRQoL) measure (EQ-5D), available in MEPS.\footnote{For a definition and explanation of this instrument, see \citet{Dolan_1997_Modeling_MC,Shaw_etal_2005_EQ5D_MC}.} We then estimate this model using the PSID.
 
 We estimate three models of medical spending: (i) Medicare spending (annual medical spending paid by parts A, B, and D of Medicare); (ii) out-of-pocket spending (medical spending paid directly by the individual); and (ii) all public spending other than Medicare. Each medical spending model includes the variables we use to predict labor and transfer income, together with current health, risk factors, and functional status as explanatory variables.
 
@@ -716,7 +716,7 @@ Our evidence does not indicate that the program has no benefit for females; in f
 \floatfoot{
 \footnotesize
 Note: This figure displays the life-cycle net present values of the main components of the cost/benefit analysis of ABC/CARE from birth to predicted death, discounted to birth at a rate of 3\%. ``Treatment vs. Control'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those subjects who stayed at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those subjects who attended alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net" we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs: the total cost of implementing ABC/CARE. Total net benefits: the total net benefits of \textit{all} the components we consider. Labor income: total individual labor income from ages 20 to the retirement of program participants  (assumed to be age 67). Parental income: total parental labor income of the parents of the program participants from when the participants were ages 1.5 to 21. Crime: the total cost of crime (judicial and victimization costs). Total medical costs: both private and public medical costs from ages 15 to predicted death. Costs of education: the total costs of education of the individual from ages 6 to 26 and include any costs from special education and grade retention. For display simplicity, the following components are omitted from the figure: (i) cost of alternative preschool paid by the control group children parents; (ii) transfer income from the government; (iii) disability benefits and social security claims; and (iv) costs of increased maternal education. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.\\
-*QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions through predicted death.\\
+*QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions through predicted death, with $\$150,000$ (2014 USD) as base value for a year of life.\\
 }
 \end{sidewaysfigure}
 
@@ -729,7 +729,7 @@ Note: This figure displays the life-cycle net present values of the main compone
 \footnotesize
 Note: This figure displays the life-cycle net present values of the main components of the cost/benefit analysis of ABC/CARE from birth to predicted death, discounted to birth at a rate of 3\%. ``Treatment vs. Control'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those subjects who stayed at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those subjects who attended alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net" we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs: the total cost of implementing ABC/CARE. Total net benefits: the total net benefits of \textit{all} the components we consider. Labor income: total individual labor income from ages 20 to the retirement of program participants  (assumed to be age 67). Parental income: total parental labor income of the parents of the program participants from when the participants were ages 1.5 to 21. Crime: the total cost of crime (judicial and victimization costs). Total medical costs: both private and public medical costs from ages 15 to predicted death. Costs of education: the total costs of education of the individual from ages 6 to 26 and include any costs from special education and grade retention. For display simplicity, the following components are omitted from the figure: (i) cost of alternative preschool paid by the control group children parents; (ii) transfer income from the government; (iii) disability benefits and social security claims; and (iv) costs of increased maternal education. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.\\
 *The treatment vs. stay at home net present value is sizable and negative (-\$91,476.3); its standard error is 86,657.3.\\
-**QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions through predicted death.\\\\
+**QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions through predicted death, with $\$150,000$ (2014 USD) as base value for a year of life.\\
 }
 \end{sidewaysfigure}
 
