--- a/output/abccarecnlsy_invariance_si30y_inc_labor_smale.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_labor_smale.tex
@@ -1,17 +1,17 @@
-% matrix: allsi30y_inc_labor_smale file: abccarecnlsy_invariance_si30y_inc_labor_smale.tex  11 Oct 2016 11:46:02
+% matrix: allsi30y_inc_labor_smale file: abccarecnlsy_invariance_si30y_inc_labor_smale.tex  11 Oct 2016 12:01:45
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S &  1.8e+04 &  1.0e-02 &  2.1e+04 &  1.5e-02 &  4.9e+03 &  2.6e-01 &  3.3e+03 &  3.1e-01 \\  
-Mother'sEducation &  4.2e+03 &  3.5e-02 &  2.9e+03 &  2.9e-01 &  2.0e+03 &  1.5e-01 &  4.0e+03 &  2.1e-01 \\  
-PIAT(5-7) &         . &         . &         . &         . &  1.3e+01 &  4.8e-01 &  6.1e+02 &  2.1e-01 \\  
-Education(30) &         . &         . &         . &         . &  1.2e+04 &  0.0e+00 &  1.9e+04 &  1.0e-02 \\  
-LaborIncome(21) &         . &         . &         . &         . &  2.9e-01 &  1.7e-01 &  2.4e-01 &  2.6e-01 \\  
-Cognitive &         . &         . &  5.0e+03 &  2.0e-01 &         . &         . & -1.5e+03 &  5.6e-01 \\  
-NonCognitive &         . &         . &  6.9e+03 &  1.2e-01 &         . &         . &  6.3e+03 &  7.0e-02 \\  
-Constant & -2.3e+04 &  8.1e-01 & -1.1e+04 &  5.7e-01 & -1.5e+05 &  9.9e-01 & -3.2e+05 &  9.6e-01 \\  
-F-stat &  4.3e+00 &         . &  2.2e+00 &         . &  9.6e+00 &         . &  8.8e+00 &         . \\  
-R2 &  5.9e-02 &         . &  8.7e-02 &         . &  2.8e-01 &         . &  4.0e-01 &         . \\  
-Observations &  3.1e+02 &         . &  1.0e+02 &         . &  3.1e+02 &         . &  3.2e+02 &         . \\  
+S & 17984.393 &     0.010 & 21406.389 &     0.015 &  4864.750 &     0.260 &  3301.140 &     0.305 \\  
+Mother'sEducation &  4182.211 &     0.035 &  2885.837 &     0.295 &  1991.183 &     0.150 &  3960.881 &     0.210 \\  
+PIAT(5-7) &         . &         . &         . &         . &    13.463 &     0.480 &   608.659 &     0.210 \\  
+Education(30) &         . &         . &         . &         . & 11855.479 &     0.000 & 18995.199 &     0.010 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.289 &     0.165 &     0.243 &     0.260 \\  
+Cognitive &         . &         . &  5012.976 &     0.205 &         . &         . & -1498.498 &     0.560 \\  
+NonCognitive &         . &         . &  6902.538 &     0.115 &         . &         . &  6335.481 &     0.070 \\  
+Constant & -2.33e+04 &     0.805 & -1.13e+04 &     0.575 & -1.50e+05 &     0.985 & -3.18e+05 &     0.965 \\  
+F-stat &     4.333 &         . &     2.187 &         . &     9.588 &         . &     8.790 &         . \\  
+R2 &     0.059 &         . &     0.087 &         . &     0.283 &         . &     0.403 &         . \\  
+Observations &   312.000 &         . &   102.000 &         . &   310.000 &         . &   315.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
