--- a/output/abccarecnlsy_invariance_si34y_bmi_smale.tex
+++ b/output/abccarecnlsy_invariance_si34y_bmi_smale.tex
@@ -1,17 +1,17 @@
-% matrix: allsi34y_bmi_smale file: abccarecnlsy_invariance_si34y_bmi_smale.tex  11 Oct 2016 11:46:30
+% matrix: allsi34y_bmi_smale file: abccarecnlsy_invariance_si34y_bmi_smale.tex  11 Oct 2016 12:02:14
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S &  2.3e+00 &  2.5e-02 &  2.8e+00 &  6.5e-02 &  1.8e+00 &  1.0e-01 &  3.1e+00 &  6.0e-02 \\  
-Mother'sEducation & -1.8e-01 &  7.0e-01 &  3.5e-01 &  3.2e-01 & -2.9e-02 &  5.1e-01 &  5.2e-01 &  1.8e-01 \\  
-PIAT(5-7) &         . &         . &         . &         . &  8.0e-02 &  8.5e-02 &  2.4e-01 &  5.0e-02 \\  
-Education(30) &         . &         . &         . &         . &  1.6e-01 &  3.0e-01 &  4.0e-01 &  2.7e-01 \\  
-LaborIncome(21) &         . &         . &         . &         . &  7.3e-05 &  8.0e-02 &  1.8e-04 &  2.0e-02 \\  
-Cognitive &         . &         . & -1.3e+00 &  8.3e-01 &         . &         . & -2.4e+00 &  9.7e-01 \\  
-NonCognitive &         . &         . &  1.9e-01 &  3.8e-01 &         . &         . &  4.8e-01 &  2.6e-01 \\  
-Constant &  3.0e+01 &  0.0e+00 &  2.5e+01 &  0.0e+00 &  1.8e+01 &  1.0e-02 & -6.8e+00 &  6.0e-01 \\  
-F-stat &  2.8e+00 &         . &  3.6e+00 &         . &  3.2e+00 &         . &  3.9e+00 &         . \\  
-R2 &  5.0e-02 &         . &  1.4e-01 &         . &  9.6e-02 &         . &  2.6e-01 &         . \\  
-Observations &  2.8e+02 &         . &  7.9e+01 &         . &  2.9e+02 &         . &  2.8e+02 &         . \\  
+S &     2.327 &     0.025 &     2.812 &     0.065 &     1.822 &     0.100 &     3.135 &     0.060 \\  
+Mother'sEducation &    -0.180 &     0.700 &     0.347 &     0.320 &    -0.029 &     0.515 &     0.518 &     0.180 \\  
+PIAT(5-7) &         . &         . &         . &         . &     0.080 &     0.085 &     0.236 &     0.050 \\  
+Education(30) &         . &         . &         . &         . &     0.161 &     0.300 &     0.399 &     0.270 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.000 &     0.080 &     0.000 &     0.020 \\  
+Cognitive &         . &         . &    -1.270 &     0.835 &         . &         . &    -2.362 &     0.970 \\  
+NonCognitive &         . &         . &     0.188 &     0.385 &         . &         . &     0.482 &     0.265 \\  
+Constant &    30.350 &     0.000 &    25.170 &     0.000 &    18.323 &     0.010 &    -6.799 &     0.600 \\  
+F-stat &     2.828 &         . &     3.562 &         . &     3.171 &         . &     3.867 &         . \\  
+R2 &     0.050 &         . &     0.142 &         . &     0.096 &         . &     0.260 &         . \\  
+Observations &   283.000 &         . &    79.000 &         . &   285.000 &         . &   280.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
