--- a/output/abccarecnlsy_invariance_si34y_bmi_spooled.tex
+++ b/output/abccarecnlsy_invariance_si34y_bmi_spooled.tex
@@ -1,17 +1,17 @@
-% matrix: allsi34y_bmi_spooled file: abccarecnlsy_invariance_si34y_bmi_spooled.tex  11 Oct 2016 11:47:58
+% matrix: allsi34y_bmi_spooled file: abccarecnlsy_invariance_si34y_bmi_spooled.tex  11 Oct 2016 12:03:46
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S &  4.1e+00 &  0.0e+00 &  4.0e+00 &  0.0e+00 &  4.2e+00 &  0.0e+00 &  3.9e+00 &  1.0e-02 \\  
-Mother'sEducation & -6.1e-02 &  5.9e-01 &  2.3e-02 &  4.9e-01 & -1.9e-02 &  5.6e-01 & -9.6e-02 &  5.7e-01 \\  
-PIAT(5-7) &         . &         . &         . &         . &  4.8e-02 &  2.0e-01 &  1.6e-01 &  7.0e-02 \\  
-Education(30) &         . &         . &         . &         . &  2.6e-02 &  4.4e-01 &  1.2e-01 &  4.3e-01 \\  
-LaborIncome(21) &         . &         . &         . &         . &  2.6e-05 &  3.8e-01 &  8.3e-05 &  2.0e-01 \\  
-Cognitive &         . &         . & -8.9e-01 &  8.3e-01 &         . &         . & -1.8e+00 &  9.5e-01 \\  
-NonCognitive &         . &         . &  7.6e-01 &  2.2e-01 &         . &         . &  9.7e-01 &  1.8e-01 \\  
-Constant &  3.1e+01 &  0.0e+00 &  3.0e+01 &  0.0e+00 &  2.5e+01 &  0.0e+00 &  1.4e+01 &  1.7e-01 \\  
-F-stat &  8.9e+00 &         . &  4.5e+00 &         . &  4.5e+00 &         . &  2.9e+00 &         . \\  
-R2 &  6.4e-02 &         . &  9.1e-02 &         . &  8.8e-02 &         . &  1.3e-01 &         . \\  
-Observations &  6.5e+02 &         . &  2.0e+02 &         . &  6.5e+02 &         . &  6.5e+02 &         . \\  
+S &     4.075 &     0.000 &     4.040 &     0.000 &     4.230 &     0.000 &     3.865 &     0.010 \\  
+Mother'sEducation &    -0.061 &     0.585 &     0.023 &     0.485 &    -0.019 &     0.555 &    -0.096 &     0.575 \\  
+PIAT(5-7) &         . &         . &         . &         . &     0.048 &     0.200 &     0.162 &     0.070 \\  
+Education(30) &         . &         . &         . &         . &     0.026 &     0.435 &     0.123 &     0.430 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.000 &     0.385 &     0.000 &     0.200 \\  
+Cognitive &         . &         . &    -0.886 &     0.835 &         . &         . &    -1.790 &     0.950 \\  
+NonCognitive &         . &         . &     0.763 &     0.220 &         . &         . &     0.972 &     0.180 \\  
+Constant &    30.876 &     0.000 &    30.416 &     0.000 &    25.240 &     0.000 &    13.717 &     0.170 \\  
+F-stat &     8.871 &         . &     4.520 &         . &     4.494 &         . &     2.939 &         . \\  
+R2 &     0.064 &         . &     0.091 &         . &     0.088 &         . &     0.127 &         . \\  
+Observations &   650.000 &         . &   197.000 &         . &   650.000 &         . &   651.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
