--- a/output/abccarecnlsy_invariance_si30y_inc_labor_sfemale.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_labor_sfemale.tex
@@ -1,17 +1,17 @@
-% matrix: allsi30y_inc_labor_sfemale file: abccarecnlsy_invariance_si30y_inc_labor_sfemale.tex  11 Oct 2016 11:46:44
+% matrix: allsi30y_inc_labor_sfemale file: abccarecnlsy_invariance_si30y_inc_labor_sfemale.tex  11 Oct 2016 12:02:28
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S &  4.4e+03 &  6.0e-02 &  2.3e+03 &  2.5e-01 &  4.6e+02 &  4.1e-01 &  5.4e+02 &  4.4e-01 \\  
-Mother'sEducation &  2.9e+02 &  4.0e-01 & -1.3e+03 &  8.0e-01 & -1.9e+03 &  9.9e-01 & -2.1e+03 &  9.6e-01 \\  
-PIAT(5-7) &         . &         . &         . &         . &  2.1e+02 &  9.0e-02 &  2.2e+02 &  2.2e-01 \\  
-Education(30) &         . &         . &         . &         . &  3.4e+03 &  0.0e+00 &  3.7e+03 &  0.0e+00 \\  
-LaborIncome(21) &         . &         . &         . &         . &  3.4e-01 &  2.0e-02 &  3.7e-01 &  5.0e-02 \\  
-Cognitive &         . &         . &  4.1e+03 &  5.5e-02 &         . &         . & -1.5e+03 &  6.7e-01 \\  
-NonCognitive &         . &         . & -1.4e+03 &  6.4e-01 &         . &         . &  2.2e+03 &  1.9e-01 \\  
-Constant &  1.7e+04 &  1.0e-01 &  3.4e+04 &  3.0e-02 & -2.5e+04 &  9.6e-01 & -2.7e+04 &  8.4e-01 \\  
-F-stat &  1.9e+00 &         . &  2.9e+00 &         . &  1.3e+01 &         . &  9.2e+00 &         . \\  
-R2 &  2.2e-02 &         . &  1.1e-01 &         . &  2.8e-01 &         . &  3.1e-01 &         . \\  
-Observations &  3.8e+02 &         . &  1.3e+02 &         . &  3.8e+02 &         . &  3.9e+02 &         . \\  
+S &  4396.848 &     0.060 &  2292.980 &     0.250 &   456.565 &     0.410 &   539.899 &     0.445 \\  
+Mother'sEducation &   289.800 &     0.400 & -1253.548 &     0.800 & -1878.064 &     0.985 & -2126.096 &     0.960 \\  
+PIAT(5-7) &         . &         . &         . &         . &   207.361 &     0.090 &   221.599 &     0.215 \\  
+Education(30) &         . &         . &         . &         . &  3381.137 &     0.000 &  3652.225 &     0.000 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.345 &     0.020 &     0.366 &     0.050 \\  
+Cognitive &         . &         . &  4078.844 &     0.055 &         . &         . & -1479.220 &     0.670 \\  
+NonCognitive &         . &         . & -1370.089 &     0.640 &         . &         . &  2229.399 &     0.195 \\  
+Constant & 17358.422 &     0.100 & 33633.047 &     0.030 & -2.51e+04 &     0.960 & -2.74e+04 &     0.840 \\  
+F-stat &     1.924 &         . &     2.882 &         . &    13.153 &         . &     9.163 &         . \\  
+R2 &     0.022 &         . &     0.106 &         . &     0.279 &         . &     0.312 &         . \\  
+Observations &   382.000 &         . &   128.000 &         . &   380.000 &         . &   385.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
