--- a/output/abccarecnlsy_invariance_si30y_inc_labor_spooled.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_labor_spooled.tex
@@ -1,17 +1,17 @@
-% matrix: allsi30y_inc_labor_spooled file: abccarecnlsy_invariance_si30y_inc_labor_spooled.tex  11 Oct 2016 11:47:28
+% matrix: allsi30y_inc_labor_spooled file: abccarecnlsy_invariance_si30y_inc_labor_spooled.tex  11 Oct 2016 12:03:15
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S &  1.1e+04 &  0.0e+00 &  1.1e+04 &  1.0e-02 &  6.3e+03 &  1.0e-01 &  6.6e+03 &  1.1e-01 \\  
-Mother'sEducation &  2.4e+03 &  3.0e-02 &  1.6e+03 &  2.7e-01 &  4.1e+02 &  4.1e-01 &  9.4e+02 &  4.0e-01 \\  
-PIAT(5-7) &         . &         . &         . &         . & -6.8e+01 &  6.1e-01 & -3.3e+02 &  7.5e-01 \\  
-Education(30) &         . &         . &         . &         . &  6.8e+03 &  0.0e+00 &  8.8e+03 &  0.0e+00 \\  
-LaborIncome(21) &         . &         . &         . &         . &  3.0e-01 &  8.5e-02 &  2.6e-01 &  2.2e-01 \\  
-Cognitive &         . &         . &  4.1e+03 &  9.5e-02 &         . &         . &  2.0e+03 &  3.0e-01 \\  
-NonCognitive &         . &         . &  1.6e+03 &  2.8e-01 &         . &         . &  5.5e+03 &  1.5e-02 \\  
-Constant & -4.9e+03 &  6.2e-01 &  3.3e+03 &  4.7e-01 & -6.5e+04 &  1.0e+00 & -7.1e+04 &  9.2e-01 \\  
-F-stat &  4.6e+00 &         . &  2.2e+00 &         . &  1.3e+01 &         . &  5.9e+00 &         . \\  
-R2 &  3.3e-02 &         . &  4.0e-02 &         . &  1.9e-01 &         . &  2.3e-01 &         . \\  
-Observations &  7.0e+02 &         . &  2.3e+02 &         . &  7.0e+02 &         . &  6.9e+02 &         . \\  
+S & 11498.463 &     0.000 & 11043.829 &     0.010 &  6285.941 &     0.105 &  6632.177 &     0.110 \\  
+Mother'sEducation &  2394.895 &     0.030 &  1627.280 &     0.270 &   405.729 &     0.415 &   940.857 &     0.395 \\  
+PIAT(5-7) &         . &         . &         . &         . &   -67.827 &     0.605 &  -325.077 &     0.755 \\  
+Education(30) &         . &         . &         . &         . &  6784.374 &     0.000 &  8756.174 &     0.000 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.299 &     0.085 &     0.261 &     0.225 \\  
+Cognitive &         . &         . &  4083.211 &     0.095 &         . &         . &  1965.443 &     0.300 \\  
+NonCognitive &         . &         . &  1550.587 &     0.280 &         . &         . &  5528.127 &     0.015 \\  
+Constant & -4882.177 &     0.620 &  3299.631 &     0.465 & -6.54e+04 &     1.000 & -7.08e+04 &     0.915 \\  
+F-stat &     4.606 &         . &     2.226 &         . &    12.713 &         . &     5.861 &         . \\  
+R2 &     0.033 &         . &     0.040 &         . &     0.191 &         . &     0.227 &         . \\  
+Observations &   695.000 &         . &   233.000 &         . &   695.000 &         . &   693.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
