--- a/output/abccarecnlsy_invariance_si30y_inc_trans_pub_sfemale.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_trans_pub_sfemale.tex
@@ -1,17 +1,17 @@
-% matrix: allsi30y_inc_trans_pub_sfemale file: abccarecnlsy_invariance_si30y_inc_trans_pub_sfemale.tex  11 Oct 2016 11:46:59
+% matrix: allsi30y_inc_trans_pub_sfemale file: abccarecnlsy_invariance_si30y_inc_trans_pub_sfemale.tex  11 Oct 2016 12:02:44
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S & -2.6e+04 &  9.8e-01 & -5.5e+04 &  9.6e-01 & -2.4e+04 &  9.9e-01 & -4.9e+04 &  9.5e-01 \\  
-Mother'sEducation & -1.0e+02 &  5.2e-01 &  1.4e+03 &  2.8e-01 &  1.0e+03 &  2.8e-01 &  3.5e+03 &  1.4e-01 \\  
-PIAT(5-7) &         . &         . &         . &         . & -1.2e+02 &  7.5e-01 & -1.0e+03 &  9.4e-01 \\  
-Education(30) &         . &         . &         . &         . & -2.4e+03 &  9.7e-01 & -2.0e+03 &  9.0e-01 \\  
-LaborIncome(21) &         . &         . &         . &         . & -3.2e-01 &  8.2e-01 & -8.4e-01 &  9.4e-01 \\  
-Cognitive &         . &         . & -2.0e+03 &  8.5e-01 &         . &         . &  8.4e+03 &  1.1e-01 \\  
-NonCognitive &         . &         . &  5.8e+03 &  8.0e-02 &         . &         . &  2.6e+03 &  2.4e-01 \\  
-Constant &  3.0e+04 &  2.0e-02 &  4.4e+04 &  3.0e-02 &  6.2e+04 &  3.0e-02 &  1.5e+05 &  3.0e-02 \\  
-F-stat &  3.0e+00 &         . &  1.3e+00 &         . &  1.7e+00 &         . &  1.0e+00 &         . \\  
-R2 &  2.7e-02 &         . &  6.6e-02 &         . &  3.7e-02 &         . &  9.5e-02 &         . \\  
-Observations &  2.5e+02 &         . &  1.1e+02 &         . &  2.6e+02 &         . &  2.5e+02 &         . \\  
+S & -2.56e+04 &     0.980 & -5.54e+04 &     0.960 & -2.38e+04 &     0.985 & -4.92e+04 &     0.955 \\  
+Mother'sEducation &  -100.152 &     0.520 &  1378.932 &     0.275 &  1002.227 &     0.285 &  3547.563 &     0.135 \\  
+PIAT(5-7) &         . &         . &         . &         . &  -121.313 &     0.745 & -1013.098 &     0.945 \\  
+Education(30) &         . &         . &         . &         . & -2388.872 &     0.970 & -1957.873 &     0.905 \\  
+LaborIncome(21) &         . &         . &         . &         . &    -0.317 &     0.825 &    -0.843 &     0.940 \\  
+Cognitive &         . &         . & -1974.061 &     0.850 &         . &         . &  8384.886 &     0.110 \\  
+NonCognitive &         . &         . &  5815.688 &     0.080 &         . &         . &  2573.675 &     0.240 \\  
+Constant & 29989.713 &     0.020 & 43623.469 &     0.030 & 62435.082 &     0.030 &  1.49e+05 &     0.030 \\  
+F-stat &     3.047 &         . &     1.287 &         . &     1.662 &         . &     1.040 &         . \\  
+R2 &     0.027 &         . &     0.066 &         . &     0.037 &         . &     0.095 &         . \\  
+Observations &   254.000 &         . &   105.000 &         . &   255.000 &         . &   252.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
