--- a/output/abccarecnlsy_invariance_si30y_inc_trans_pub_smale.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_trans_pub_smale.tex
@@ -1,17 +1,17 @@
-% matrix: allsi30y_inc_trans_pub_smale file: abccarecnlsy_invariance_si30y_inc_trans_pub_smale.tex  11 Oct 2016 11:46:16
+% matrix: allsi30y_inc_trans_pub_smale file: abccarecnlsy_invariance_si30y_inc_trans_pub_smale.tex  11 Oct 2016 12:01:59
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S & -9.2e+03 &  9.7e-01 & -1.1e+04 &  8.4e-01 & -9.2e+03 &  9.7e-01 & -1.0e+04 &  8.1e-01 \\  
-Mother'sEducation &  1.1e+03 &  6.0e-02 &  1.8e+03 &  1.3e-01 &  1.4e+03 &  1.0e-01 &  2.6e+03 &  1.2e-01 \\  
-PIAT(5-7) &         . &         . &         . &         . & -2.3e+02 &  7.4e-01 &  1.3e+02 &  2.3e-01 \\  
-Education(30) &         . &         . &         . &         . & -9.5e+01 &  5.9e-01 &  8.7e+00 &  5.0e-01 \\  
-LaborIncome(21) &         . &         . &         . &         . &  7.8e-02 &  3.4e-01 & -1.1e-01 &  9.4e-01 \\  
-Cognitive &         . &         . & -1.5e+03 &  8.9e-01 &         . &         . & -2.7e+03 &  8.8e-01 \\  
-NonCognitive &         . &         . &  2.2e+02 &  3.3e-01 &         . &         . &  1.8e+02 &  3.6e-01 \\  
-Constant & -1.8e+03 &  5.9e-01 & -7.5e+03 &  8.1e-01 &  1.7e+04 &  3.3e-01 & -2.8e+04 &  7.7e-01 \\  
-F-stat &  1.7e+00 &         . &  6.8e-01 &         . &  1.0e+00 &         . &  5.3e-01 &         . \\  
-R2 &  1.2e-02 &         . &  5.8e-02 &         . &  1.9e-02 &         . &  9.5e-02 &         . \\  
-Observations &  2.0e+02 &         . &  7.9e+01 &         . &  2.0e+02 &         . &  2.0e+02 &         . \\  
+S & -9163.289 &     0.970 & -1.09e+04 &     0.840 & -9183.792 &     0.970 & -1.01e+04 &     0.805 \\  
+Mother'sEducation &  1079.304 &     0.060 &  1780.950 &     0.125 &  1357.454 &     0.100 &  2589.214 &     0.120 \\  
+PIAT(5-7) &         . &         . &         . &         . &  -231.170 &     0.740 &   134.292 &     0.230 \\  
+Education(30) &         . &         . &         . &         . &   -94.621 &     0.585 &     8.667 &     0.495 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.078 &     0.340 &    -0.115 &     0.935 \\  
+Cognitive &         . &         . & -1522.362 &     0.895 &         . &         . & -2681.798 &     0.880 \\  
+NonCognitive &         . &         . &   219.476 &     0.330 &         . &         . &   179.781 &     0.360 \\  
+Constant & -1768.141 &     0.585 & -7509.722 &     0.810 & 17402.359 &     0.330 & -2.79e+04 &     0.770 \\  
+F-stat &     1.740 &         . &     0.682 &         . &     1.050 &         . &     0.530 &         . \\  
+R2 &     0.012 &         . &     0.058 &         . &     0.019 &         . &     0.095 &         . \\  
+Observations &   201.000 &         . &    79.000 &         . &   200.000 &         . &   203.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
