--- a/output/abccarecnlsy_invariance_si34y_bmi_sfemale.tex
+++ b/output/abccarecnlsy_invariance_si34y_bmi_sfemale.tex
@@ -1,17 +1,17 @@
-% matrix: allsi34y_bmi_sfemale file: abccarecnlsy_invariance_si34y_bmi_sfemale.tex  11 Oct 2016 11:47:13
+% matrix: allsi34y_bmi_sfemale file: abccarecnlsy_invariance_si34y_bmi_sfemale.tex  11 Oct 2016 12:02:59
 \begin{table}[htbp]
 \begin{tabular}{lcccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S &  4.4e+00 &  0.0e+00 &  3.6e+00 &  1.5e-02 &  4.5e+00 &  2.0e-02 &  3.7e+00 &  1.2e-01 \\  
-Mother'sEducation & -1.1e-01 &  5.9e-01 & -2.7e-01 &  6.8e-01 & -2.2e-01 &  7.1e-01 & -4.3e-01 &  7.4e-01 \\  
-PIAT(5-7) &         . &         . &         . &         . & -5.8e-03 &  5.3e-01 &  7.6e-02 &  2.8e-01 \\  
-Education(30) &         . &         . &         . &         . &  7.8e-04 &  5.0e-01 &  3.4e-01 &  4.2e-01 \\  
-LaborIncome(21) &         . &         . &         . &         . &  5.4e-05 &  3.1e-01 & -1.2e-05 &  5.2e-01 \\  
-Cognitive &         . &         . & -4.8e-01 &  6.8e-01 &         . &         . & -7.7e-01 &  7.1e-01 \\  
-NonCognitive &         . &         . &  8.6e-01 &  2.5e-01 &         . &         . &  8.1e-01 &  2.8e-01 \\  
-Constant &  3.3e+01 &  0.0e+00 &  3.5e+01 &  0.0e+00 &  3.4e+01 &  0.0e+00 &  2.5e+01 &  8.5e-02 \\  
-F-stat &  6.3e+00 &         . &  3.3e+00 &         . &  3.9e+00 &         . &  2.4e+00 &         . \\  
-R2 &  7.5e-02 &         . &  1.1e-01 &         . &  1.2e-01 &         . &  1.7e-01 &         . \\  
-Observations &  3.7e+02 &         . &  1.2e+02 &         . &  3.7e+02 &         . &  3.6e+02 &         . \\  
+S &     4.380 &     0.000 &     3.620 &     0.015 &     4.538 &     0.020 &     3.731 &     0.115 \\  
+Mother'sEducation &    -0.110 &     0.585 &    -0.273 &     0.675 &    -0.225 &     0.705 &    -0.433 &     0.735 \\  
+PIAT(5-7) &         . &         . &         . &         . &    -0.006 &     0.530 &     0.076 &     0.285 \\  
+Education(30) &         . &         . &         . &         . &     0.001 &     0.500 &     0.337 &     0.420 \\  
+LaborIncome(21) &         . &         . &         . &         . &     0.000 &     0.315 &    -0.000 &     0.525 \\  
+Cognitive &         . &         . &    -0.480 &     0.680 &         . &         . &    -0.773 &     0.705 \\  
+NonCognitive &         . &         . &     0.858 &     0.255 &         . &         . &     0.805 &     0.275 \\  
+Constant &    32.921 &     0.000 &    34.948 &     0.000 &    34.288 &     0.000 &    25.174 &     0.085 \\  
+F-stat &     6.255 &         . &     3.312 &         . &     3.929 &         . &     2.370 &         . \\  
+R2 &     0.075 &         . &     0.110 &         . &     0.122 &         . &     0.167 &         . \\  
+Observations &   366.000 &         . &   117.000 &         . &   365.000 &         . &   364.000 &         . \\  
 \hline \hline \end{tabular}
 \end{table}
